--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lucas Miller</title>
     <base href="/">
+    <!--  -->
+    <!-- non weather -->
     <!-- <link rel="stylesheet" href="https://bootswatch.com/3/darkly/bootstrap.min.css"> -->
+    <!-- weather -->
+    <!-- <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css" crossorigin="anonymous"> -->
+    <!--  -->
     <!-- <link rel="stylesheet" href="../assets/css/start.css"> -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
