--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lucas Miller</title>
     <base href="/">
-    <!--  -->
-    <!-- non weather -->
-    <!-- <link rel="stylesheet" href="https://bootswatch.com/3/darkly/bootstrap.min.css"> -->
-    <!-- weather -->
-    <!-- <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css" crossorigin="anonymous"> -->
-    <!--  -->
-    <!-- <link rel="stylesheet" href="../assets/css/start.css"> -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   </head>
   <body>
     <app-root></app-root>
